--- a/src/app/pages/blogs/blogs.component.css
+++ b/src/app/pages/blogs/blogs.component.css
@@ -129,13 +129,26 @@
   }
   .blog-level{
     position: absolute;
-    background:linear-gradient(to right, #f6a0c4 , #9089fc );
-    color: black;
+    color: white;
     font-size: 18px;
-    width: max-content;
-    bottom: 10px;
+    bottom: 0;
     padding: 5px 10px;
-    border-top-right-radius: 10px;
+    text-align: center;
+    width: 100%;
+    background-color: rgba(59, 59, 59, 0.572);
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    overflow: hidden;
+  }
+  .blog-level::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    filter: blur(5px);
+    z-index: -1;
   }
   .right-section {  
     width: 300px; 
