--- a/src/app/authentication/authentication.component.html
+++ b/src/app/authentication/authentication.component.html
@@ -1,7 +1,7 @@
 <div class="login-container">
   <div class="website-info">
-    <i class="pi pi-spin pi-slack"></i>
-    <h1>Cavers</h1>
+    <img [src]="getImgSrc()" alt="" />
+    <span>CAVERS</span>
   </div>
   <div class="form-all-section">
     <div>
