--- a/src/app/dashboard/edit-blog/edit-blog.component.html
+++ b/src/app/dashboard/edit-blog/edit-blog.component.html
@@ -43,7 +43,7 @@
             formControlName="selectedCategorys"
             [(ngModel)]="selectedCategorys"
             optionLabel="name"
-            [style]="{ width: '370px' }"
+            [style]="{ 'min-width': '100%' }"
             placeholder="Select Category"
           ></p-multiSelect>
         </div>
