--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -1,9 +1,7 @@
 <div class="header">
   <div class="header-bg-img"></div>
   <div class="header-content">
-    <div class="header-content-blop">
-      Lorem ipsum dolor sit amet, consectetur
-    </div>
+    <div class="header-content-blop">Lorem ipsum dolor</div>
     <div class="header-content-first">
       <span>Discover Our Latest Products</span>
       <span>Explore Our Exciting Offers</span>
