--- a/src/app/dashboard/add-blog/add-blog.component.html
+++ b/src/app/dashboard/add-blog/add-blog.component.html
@@ -31,7 +31,7 @@
             [options]="categorys"
             formControlName="selectedCategorys"
             optionLabel="name"
-            [style]="{ width: '370px' }"
+            [style]="{ 'min-width': '100%' }"
             placeholder="Select Category"
           ></p-multiSelect>
         </div>
