--- a/src/app/pages/about-page/about-page.component.css
+++ b/src/app/pages/about-page/about-page.component.css
@@ -15,12 +15,9 @@
     flex-direction: column;
     gap: 10px;  
   }
-  
-  
    span {
-    font-size: 20px;
+    font-size: var(--large-font-size);
 }
-  
    p {
     color: var(--graycolor);
 }
@@ -41,7 +38,7 @@
     }
   
   .about-headline-text {
-    font-size: 18px;
+    font-size: var(--main-font-size);
     vertical-align: 1.6;
     margin-right: 5px;
 
