--- a/src/app/pages/blogs/blogs.component.css
+++ b/src/app/pages/blogs/blogs.component.css
@@ -6,7 +6,7 @@
 }
 
 .no-blogs-found i {
-  font-size: 40px;
+  font-size: var(--x-largest-font-size);
 }
 
 .no-blogs-found span{
@@ -16,6 +16,7 @@
 .mainpage {
     max-width: 1300px;
     margin: 20px auto;
+    padding: 5px;
 }
   
   .split-section {
@@ -31,7 +32,8 @@
 .filter-section {
   display: flex;
   gap: 10px;
-}.filter-section button {
+}
+.filter-section button {
   height: 37px;
   border: transparent;
 }
@@ -48,7 +50,7 @@
   
   .blog {
     padding: 10px;
-    height: 250px;
+    min-height: 250px;
     border-radius: 10px;
     display: flex;
     justify-content: space-between;
@@ -66,7 +68,7 @@
   
   .blog-title {
     color: var(--maincolor);
-    font-size: 24px;
+    font-size: var(--largest-font-size);
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient:  vertical;
@@ -81,7 +83,7 @@
   .blog-category {
     color: var(--graycolor);
     margin-bottom: 5px;
-    font-size: 14px;
+    font-size: var(--smaller-font-size);
     display: -webkit-box;
     -webkit-line-clamp: 1;
     -webkit-box-orient:  vertical;
@@ -101,7 +103,7 @@
   }
   
   .blog-tag {
-    font-size: 14px;
+    font-size: var(--smaller-font-size);
     background-color: var(--special-button-background);
     color: var(--special-button-color);
     padding: 2px 5px ;
@@ -109,7 +111,7 @@
   }
   
   .blog-date {
-    font-size: 14px;
+    font-size: var(--smaller-font-size);
     width: max-content;
     color: var(--graycolor);
     position: absolute;
@@ -130,7 +132,7 @@
   .blog-level{
     position: absolute;
     color: white;
-    font-size: 18px;
+    font-size: var(--main-font-size);
     bottom: 0;
     padding: 5px 10px;
     text-align: center;
@@ -181,7 +183,7 @@
 }
   
   .recommended-tag {
-    font-size: 14px;
+    font-size: var(--smaller-font-size);
     background-color: var(--special-button-background);
     color: var(--special-button-color);
     padding: 2px 5px ;
@@ -214,7 +216,7 @@
   overflow:  hidden;
   color: var(--graycolor);
   margin: 5px auto 10px 0;
-  font-size: 15px;
+  font-size: var(--smaller-font-size);
 }
   .Newsletter {
     display: flex;
@@ -229,9 +231,62 @@
   
   .privacy-note {
     color:var(--graycolor);
-    font-size: 14px;
+    font-size: var(--smaller-font-size);
   }
   .paginator{
     margin: 10px;
   }
-  
+  @media screen and (max-width: 1000px) {
+  .left-section{
+    width: 100%;
+  }
+  .right-section{
+    display: none;
+  }
+  }
+  @media screen and (max-width: 768px) {
+    
+  .blogs{
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .blog{
+    flex-direction: column;
+     min-height: 100px;
+     border :var(--bordercolor) solid 1px;
+     width: 320px;
+    }
+    .button-div{
+      position: static ;
+      bottom: 40px;
+    }
+    .blog-tags {
+      position: static;
+    }
+    .blog-date {
+      position: static;
+    }
+    .blog-left-section{
+      order: 2;
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
+    }
+    .blog-img {
+      order: 1;
+      width: 100%;
+      height: 150px;
+    }
+    .blog-img img{
+      width: 100%;
+      height: 150px;
+    }
+    .filter-section {
+      flex-direction: column;
+    }
+    ::ng-deep .p-dropdown{
+      width: 100%;
+      border :red solid 1px;
+    }
+  }
