--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -56,7 +56,7 @@
           pButton
         ></button>
         <button
-          *ngIf="isAuthAdmin"
+          *ngIf="isAuthAdmin == true"
           class="p-button-text"
           routerLinkActive="activebutton"
           [routerLink]="['AddBlog']"
@@ -65,7 +65,7 @@
         ></button>
 
         <button
-          *ngIf="isAuthAdmin"
+          *ngIf="isAuthAdmin == true"
           class="p-button-text"
           routerLinkActive="activebutton"
           [routerLink]="['Users']"
