--- a/src/app/pages/blogs/blogs.component.html
+++ b/src/app/pages/blogs/blogs.component.html
@@ -111,8 +111,15 @@
 
     <div class="right-section">
       <div class="recommended">
-        <h3>Latest Blogs</h3>
-        <div class="blogs" *ngIf="isLoading; else topBlogs">
+        <h3>Top Blogs</h3>
+        <div
+          class="blogs"
+          *ngIf="
+            isTopBlogsLoading;
+            else topBlogs || topFreeBlogs.length > 0;
+            else: noTopBlogsFound
+          "
+        >
           <p-skeleton width="100%" height="40px" styleClass="mb-2"></p-skeleton>
           <p-skeleton width="100%" height="40px" styleClass="mb-2"></p-skeleton>
           <p-skeleton width="100%" height="40px" styleClass="mb-2"></p-skeleton>
@@ -139,6 +146,9 @@
           >
             <i class="pi pi-ellipsis-h"></i>
           </p-button>
+        </ng-template>
+        <ng-template #noTopBlogsFound>
+          <h5>No blogs found.</h5>
         </ng-template>
       </div>
 
