--- a/src/app/pages/blog-page/blog-page.component.html
+++ b/src/app/pages/blog-page/blog-page.component.html
@@ -36,12 +36,7 @@
     <h2>{{ blog.title }}</h2>
     <div class="shortDescription">{{ blog.shortDescription }}</div>
     <p-divider></p-divider>
-    <p-image
-      [src]="blog.chartImage"
-      alt="Image"
-      height="400px"
-      [preview]="true"
-    ></p-image>
+    <p-image [src]="blog.chartImage" alt="Image" [preview]="true"></p-image>
     <div>
       <div class="blog-content" [innerHTML]="trustedText"></div>
     </div>
