make changes in the confirmation system in the auth pages

--- a/src/app/authentication/authentication.component.css
+++ b/src/app/authentication/authentication.component.css
@@ -6,9 +6,43 @@
     gap: 10px;
     margin-bottom: 30px;
   }
-  .website-info img{
-      height: 65px;
-  }
+  
+    @-webkit-keyframes rotating /* Safari and Chrome */ {
+        from {
+          -webkit-transform: rotate(0deg);
+          -o-transform: rotate(0deg);
+          transform: rotate(0deg);
+        }
+        to {
+          -webkit-transform: rotate(360deg);
+          -o-transform: rotate(360deg);
+          transform: rotate(360deg);
+        }
+      }
+      @keyframes rotating {
+        from {
+          -ms-transform: rotate(0deg);
+          -moz-transform: rotate(0deg);
+          -webkit-transform: rotate(0deg);
+          -o-transform: rotate(0deg);
+          transform: rotate(0deg);
+        }
+        to {
+          -ms-transform: rotate(360deg);
+          -moz-transform: rotate(360deg);
+          -webkit-transform: rotate(360deg);
+          -o-transform: rotate(360deg);
+          transform: rotate(360deg);
+        }
+      }
+      .website-info img {
+          height: 75px;
+        -webkit-animation: rotating 3s linear infinite;
+        -moz-animation: rotating 3s linear infinite;
+        -ms-animation: rotating 3s linear infinite;
+        -o-animation: rotating 3s linear infinite;
+        animation: rotating 3s linear infinite;
+      }
   .website-info span{
     font-size: var(--largest-font-size);
     font-weight: 600;
