--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -23,7 +23,7 @@
       <div class="left-toolbar">
         <a [routerLink]="['']">
           <img [src]="getImgSrc()" alt="Logo" />
-          <span>CAVERS</span>
+          <span>Galaxia</span>
         </a>
       </div>
       <p-divider layout="vertical" class="divider-vertical"></p-divider>
