--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -12,7 +12,7 @@
       elit.
     </div>
     <div class="button-split">
-      <button pButton label="Sign In"></button>
+      <button pButton routerLink="/auth/signup" label="Sign In"></button>
       <button
         pButton
         icon="pi pi-play"
@@ -27,24 +27,37 @@
     <h3>Trusted by the world’s most innovative teams</h3>
     <div class="cloud-logos">
       <div class="cloud-logo">
-        <i class="pi pi-apple"></i>
+        <img
+          src="../../../assets/img/crypto-imgs/bitcoin-btc-logo.png"
+          alt=""
+        />
         <span>Bitcoin</span>
       </div>
       <div class="cloud-logo">
-        <i class="pi pi-bitcoin"></i>
-        <span>Bitcoin</span>
+        <img
+          src="../../../assets/img/crypto-imgs/ethereum-eth-logo.png"
+          alt=""
+        />
+        <span>Ethereum</span>
+      </div>
+
+      <div class="cloud-logo">
+        <img src="../../../assets/img/crypto-imgs/bnb-bnb-logo.png" alt="" />
+        <span>BNB</span>
       </div>
       <div class="cloud-logo">
-        <i class="pi pi-apple"></i>
-        <span>Bitcoin</span>
+        <img
+          src="../../../assets/img/crypto-imgs/dogecoin-doge-logo.png"
+          alt=""
+        />
+        <span>Dogecoin</span>
       </div>
       <div class="cloud-logo">
-        <i class="pi pi-bitcoin"></i>
-        <span>Bitcoin</span>
-      </div>
-      <div class="cloud-logo">
-        <i class="pi pi-apple"></i>
-        <span>Bitcoin</span>
+        <img
+          src="../../../assets/img/crypto-imgs/cardano-ada-logo.png"
+          alt=""
+        />
+        <span>Cardano</span>
       </div>
     </div>
   </div>
