--- a/src/app/authentication/signup/signup.component.html
+++ b/src/app/authentication/signup/signup.component.html
@@ -9,7 +9,15 @@
       name="username"
       ngModel
       required
+      minlength="1"
+      maxlength="24"
     />
+    <div
+      *ngIf="signUpForm.controls['username'].hasError('maxlength')"
+      class="error-message"
+    >
+      Maximum length is 24 characters.
+    </div>
   </div>
   <div class="form-group">
     <label for="gmailname">Gmail</label>
@@ -17,11 +25,18 @@
       id="gmailname"
       type="email"
       pInputText
-      placeholder="Enter your gmail"
+      placeholder="Enter your email"
       name="gmailname"
       ngModel
       required
+      email
     />
+    <div
+      *ngIf="signUpForm.controls['gmailname'].hasError('email')"
+      class="error-message"
+    >
+      Please enter a valid email address.
+    </div>
   </div>
   <div class="form-group">
     <label for="password">Password</label>
@@ -33,7 +48,18 @@
       name="password"
       ngModel
       required
+      minlength="8"
+      #passwordInput="ngModel"
     />
+    <div
+      *ngIf="passwordInput.errors && passwordInput.touched"
+      class="error-message"
+    >
+      <div *ngIf="passwordInput.errors['required']">Password is required.</div>
+      <div *ngIf="passwordInput.errors['minlength']">
+        Password must be at least 8 characters long.
+      </div>
+    </div>
   </div>
   <button
     type="submit"
