--- a/src/app/pages/homepage/homepage.component.css
+++ b/src/app/pages/homepage/homepage.component.css
@@ -54,7 +54,6 @@
     color: var(--graycolor);
   }
   
-  /* Style the buttons */
   .button-split {
     display: flex;
     justify-content: center;
@@ -94,7 +93,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 10px;
+    gap: 20px;
   }  
   .cloud-logo{
     display: flex;
@@ -102,8 +101,8 @@
     gap: 10px;    
   }
   
-  .cloud-logo i {
-    font-size: 35px;  
+  .cloud-logo img {
+    height: 35px;  
   }
   
   .cloud-logo span{
